--- a/mesa-selecta/src/Components/Registro y Login/Login.css
+++ b/mesa-selecta/src/Components/Registro y Login/Login.css
@@ -1,14 +1,20 @@
+.container{
+    background: url(C:\Users\rony1\Desktop\App-Reserva\reservas-restaurante-app\mesa-selecta\assets\login-back.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+}
 .login{
     border: 1px solid black;
     width: 400px;
     height: 500px;
-    background: url(C:\Users\rony1\Desktop\App-Reserva\reservas-restaurante-app\mesa-selecta\assets\login-back.jpg);
     color: white;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0,0,0,0.75);
     background-size: cover;
     background-position: center;
     overflow: hidden;
+    background-color: #F5F5F5;
 }
 
 .formulario{
