--- a/mesa-selecta/src/Components/Registro y Login/RegistroU.css
+++ b/mesa-selecta/src/Components/Registro y Login/RegistroU.css
@@ -1,8 +1,12 @@
-.ContenedorU{
-    width: 70%;
+.ContenedorU {
+    width: 80%;
     margin: 10%;
     height: 100%;
+    background-color:#F5F5F5 ;
+    border-radius: 3%;
+    padding: 3%;
 }
+
 
 .tabs{
     margin-left: -2%;
@@ -32,6 +36,13 @@ input{
 label{
     color: black;
 }
+
+.RegistrarEMP > a{
+    font-size: 20px;
+    color: #008080;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 
 
 
