--- a/mesa-selecta/src/Components/Registro y Login/ChooseUser.css
+++ b/mesa-selecta/src/Components/Registro y Login/ChooseUser.css
@@ -1,6 +1,6 @@
 .ContenedorCh {
     width: 80%;
-    margin: 10%;
+    margin: 2rem;
     height: 120%;
     background-color:#F5F5F5 ;
     border-radius: 3%;
