--- a/mesa-selecta/src/Components/Restaurantes/RegistroRest.css
+++ b/mesa-selecta/src/Components/Restaurantes/RegistroRest.css
@@ -8,7 +8,7 @@ body {
 
 .ContenedorRest{
     width: 70%;
-    margin: 10%;
+    margin: 2rem;
     height: 100%;
     background-color:#F5F5F5 ;
     border-radius: 3%;
