--- a/mesa-selecta/src/Components/Registro y Login/ChooseUser.css
+++ b/mesa-selecta/src/Components/Registro y Login/ChooseUser.css
@@ -29,7 +29,11 @@ align-items:center ;
 }
 
 label{
-    font-size: 20px;
+    font-size: 18px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+label, h1, h2, h3, h4, h5, h6{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
