--- a/mesa-selecta/src/Components/Registro y Login/RegistroU.css
+++ b/mesa-selecta/src/Components/Registro y Login/RegistroU.css
@@ -16,17 +16,13 @@
     margin-bottom: 1%;
 }
 
-.btn-group-vertical{
+/* .btn-group-vertical{
     margin-right: 3%;
-}
+} */
 
-.btn{
+/* .btn{
     border-radius: 10px;
-}
-
-.btn-primary{
-    background-color: #008080;
-}
+} */
 
 input{
     background-color: rgb(187, 186, 186);
