--- a/mesa-selecta/src/Components/Reserva/Reserva.css
+++ b/mesa-selecta/src/Components/Reserva/Reserva.css
@@ -11,9 +11,9 @@
     margin-bottom: 1%;
 }
 
-.btn-group-vertical{
+/* .btn-group-vertical{
     margin-right: 3%;
-}
+} */
 
 .calendar{
     border: black;
