--- a/mesa-selecta/src/Components/Home/Home.css
+++ b/mesa-selecta/src/Components/Home/Home.css
@@ -1,7 +1,27 @@
-.navigation {
-    padding: 24px 40px;
+header {
+    background-color: #ffffff;
+    position: fixed;
+    width: 100%; 
+    z-index: 1000; 
+    padding: 10px 20px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
+    text-decoration: none;
+  }
+  
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+  
+  nav ul li {
+    margin-right: 20px;
+  }
+  
+  .botones {
+    display: flex;
   }
   
