--- a/mesa-selecta/src/Components/Home/Home.css
+++ b/mesa-selecta/src/Components/Home/Home.css
@@ -1,11 +1,11 @@
 header {
-    background-color: #ffffff;
-    position: fixed;
+    background-color: #f5f7ff;
+
     width: 100%; 
-    z-index: 1000; 
     padding: 10px 20px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
     text-decoration: none;
+    margin-bottom: 5%;
   }
   
   nav ul {
@@ -20,8 +20,21 @@ header {
   nav ul li {
     margin-right: 20px;
   }
-  
+  nav a {
+    text-decoration: none;
+  }
   .botones {
     display: flex;
   }
+  button {
+    width: 100%;
+    transition: width 0.3s ease-in-out;
+  }
   
+  button:hover {
+    width: 105%; 
+  }
+  
+  .content{
+    margin-top: 5%;
+  }
