--- a/mesa-selecta/src/Components/Registro y Login/Login.css
+++ b/mesa-selecta/src/Components/Registro y Login/Login.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     display: flex;
     gap: 5px;
-    backdrop-filter: brightness(40%);
+    /* backdrop-filter: brightness(40%); */
     justify-content: center;
 }
 
